--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ nav{
 .creator{
     font-size: 30px;
 }
-default_padding{
-    padding: 3rem 1rem;
+
+.item_wrapper{
+    display: flex;
+    justify-content: space-around;
+}
+.self_image{
+    padding-top: 20px;
 }
