--- a/style.css
+++ b/style.css
@@ -60,7 +60,15 @@ nav {
 }
 
 .pics {
-    margin-right: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin: 10px 20px 10px 10px;
+}
+
+.pets {
+    text-align: center;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.side_note {
+    color: blueviolet;
 }
