--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@ header {
     top: 0%;
 }
 
+
 nav {
     font-size: 20px;
     align-self: center;
 }
 
 .description {
-    font-size: 45px;
+    font-size: 5vh;
     font-family: fantasy;
     margin-bottom: 0px;
     padding-bottom: 0px;
@@ -71,4 +72,17 @@ nav {
 
 .side_note {
     color: blueviolet;
+}
+
+.form {
+    text-align: center;
+}
+
+
+
+@media(max-width:786px) {
+    .background {
+        margin: 0 auto !important;
+        padding: 0 !important;
+    }
 }
